--- a/pom.xml
+++ b/pom.xml
@@ -10,58 +10,51 @@
     
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
-    <artifactId>WEBJAR_ID</artifactId>
-    <version>UPSTREAM_VERSION-SNAPSHOT</version>
-    <name>WEBJAR_NAME</name>
-    <description>WebJar for WEBJAR_NAME</description>
+    <artifactId>resumable.js</artifactId>
+    <version>1.0.0</version>
+    <name>Resumable.js</name>
+    <description>WebJar for Resumable.js</description>
     <url>http://webjars.org</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <upstream.version>UPSTREAM_VERSION</upstream.version>
-        <upstream.url>UPSTREAM_URL</upstream.url>
+        <upstream.version>1.0</upstream.version>
+	<upstream.branch>v1.0</upstream.branch>
+	<upstream.url>https://github.com/23/resumable.js/archive/</upstream.url>
         <destDir>${project.build.outputDirectory}/META-INF/resources/webjars/${project.artifactId}/${upstream.version}</destDir>
         <requirejs>
             {
                 "paths": {
-                    "WEBJAR_ID": "WEBJAR_ID"
+                    "resumable": "resumable"
                 },
-                "shim": {
-                    "WEBJAR_ID": ["DEP_ID"]
-                }
             }
         </requirejs>
     </properties>
 
     <developers>
         <developer>
-            <id>YOUR_ID</id>
-            <name>YOUR_NAME</name>
-            <email>YOUR_EMAIL</email>
+            <id>dylex</id>
+            <name>Dylan Simon</name>
+            <email>dylan-webjars@dylex.net</email>
         </developer>
     </developers>
 
     <licenses>
         <license>
-            <name>UPSTREAM_LICENSE_NAME</name>
-            <url>UPSTREAM_LICENSE_VERSION</url>
+            <name>MIT License</name>
+	    <url>https://github.com/23/resumable.js/blob/master/MIT-LICENSE</url>
             <distribution>repo</distribution>
         </license>
     </licenses>
 
     <scm>
-        <url>http://github.com/webjars/WEBJAR_ID</url>
-        <connection>scm:git:https://github.com/webjars/WEBJAR_ID.git</connection>
-        <developerConnection>scm:git:https://github.com/webjars/WEBJAR_ID.git</developerConnection>
+        <url>http://github.com/webjars/resumable.js</url>
+        <connection>scm:git:https://github.com/webjars/resumable.js.git</connection>
+        <developerConnection>scm:git:https://github.com/webjars/resumable.js.git</developerConnection>
         <tag>HEAD</tag>
     </scm>
     
     <dependencies>
-        <dependency>
-            <groupId>org.webjars</groupId>
-            <artifactId>ANOTHER_WEBJAR_ID</artifactId>
-            <version>ANOTHER_WEBJAR_VERSION</version>
-        </dependency>
     </dependencies>
     
     <build>
@@ -78,7 +71,7 @@
                         </goals>
                         <configuration>
                             <url>${upstream.url}</url>
-                            <fromFile>SOME_FILE-${upstream.version}.zip</fromFile>
+                            <fromFile>${upstream.branch}.zip</fromFile>
                             <toFile>${project.build.directory}/${project.artifactId}.zip</toFile>
                         </configuration>
                     </execution>
@@ -98,7 +91,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/SOME_SUBDIR-${upstream.version}" />
+                                    <fileset dir="${project.build.directory}/resumable.js-${upstream.version}" />
                                 </move>
                             </target>
                         </configuration>
