--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <packaging>jar</packaging>
     <groupId>org.webjars</groupId>
     <artifactId>resumable.js</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>Resumable.js</name>
     <description>WebJar for Resumable.js</description>
     <url>http://webjars.org</url>
@@ -48,7 +48,7 @@
         <url>http://github.com/webjars/resumable.js</url>
         <connection>scm:git:https://github.com/webjars/resumable.js.git</connection>
         <developerConnection>scm:git:https://github.com/webjars/resumable.js.git</developerConnection>
-        <tag>HEAD</tag>
+        <tag>resumable.js-1.0</tag>
     </scm>
     
     <dependencies>
@@ -88,7 +88,7 @@
                                 <unzip src="${project.build.directory}/${project.artifactId}.zip" dest="${project.build.directory}" />
                                 <echo message="moving resources" />
                                 <move todir="${destDir}">
-                                    <fileset dir="${project.build.directory}/resumable.js-${upstream.version}" includes="resumable.js"/>
+                                    <fileset dir="${project.build.directory}/resumable.js-${upstream.version}" includes="resumable.js" />
                                 </move>
                             </target>
                         </configuration>
